Icons in portfolio changed and flyer pdf added

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             tailor-made solution that
             fits you, your people, your budget and your plans. <br>
           </p>
-          <h5 style="margin-left: 40%;"> 1 </h5>
+          <h5 style="margin-left: 50%;"> 1 </h5>
         </div>
         <div class="carousel-item">
           <h3>About Our Language Courses</h3>
@@ -182,7 +182,7 @@
             <li>Your course can be delivered as a standard programme or we can build an option that is customised to
               you,
               regardless of level – beginner to advanced </li>
-            <h5 style="margin-left: 40%;"> 2 </h5>
+            <h5 style="margin-left: 50%;"> 2 </h5>
           </ul>
           </p>
         </div>
@@ -199,7 +199,7 @@
             <li>Tigrigna </li>
             <li>Exam Preparation Programs (IELTS, SAT, TOEFL)</li>
             <li>Junior Programs: Reading Challenge Programs</li>
-            <h5 style="margin-left: 40%;"> 3 </h5>
+            <h5 style="margin-left: 50%;"> 3 </h5>
           </ul>
           </p>
         </div>
@@ -223,7 +223,7 @@
             others in a similar situation. Going online has all the same ingredients as face-to-face learning …
             but without the travel!
           </p>
-          <h5 style="margin-left: 40%;"> 4 </h5>
+          <h5 style="margin-left: 50%;"> 4 </h5>
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"
@@ -238,11 +238,19 @@
     </div>
     <div class="row text-center" style="margin-top: 30px; margin-left: 2%; margin-right: 2%">
       <div class="col-md-4">
+        </div>
+      <div class="col-md-4">
         <span class="fa-stack fa-4x">
           <i class="fas fa-circle fa-stack-2x text-primary"></i>
           <i class="fab fa-accusoft fa-stack-1x fa-inverse"></i>
         </span>
-        <h4 class="service-heading">Special Programs for Exam Preparation</h4>
+        <!-- <object data="flyer\Bridge Soft Skills Courses.pdf" type="application/pdf" width="100%" height="100%">
+          <p>Alternative text - include a link <a href="https://drive.google.com/file/d/13_AFxY_6uJEhYPbZuHYOBWg2A563fuy7/view?usp=sharing">to the PDF!</a></p>
+        </object> -->
+        <h4 class="service-heading">Our services in detail including price</h4>
+        <a href="flyer/Bridge Soft Skills Courses.pdf"> <img class="img-fluid" src="flyer/flyer.png" alt="" /> </a>
+        <p class="text-muted">To see detail of the services we provide<a href="flyer/Bridge Soft Skills Courses.pdf"> click here</a>.</p>
+        <!-- <h4 class="service-heading">Special Programs for Exam Preparation</h4>
         <p class="text-muted">
           Bridge offers exam preparation programs for IELTS, SAT, TOEFL and other national and international language
           exams.
@@ -250,7 +258,7 @@
           Our highly qualified teachers can guide and prepare you to achieve the best possible result especially if you
           are challenged by
           time and personal resources. We have everything you need – come talk to us. .
-        </p>
+        </p> -->
       </div>
       <!-- <div class="col-md-4">
           <span class="fa-stack fa-4x">
@@ -264,22 +272,6 @@
              explore activities around reading, writing, acting, singing and drawing that will challenge and motivate in lasting ways.    
           </p>
         </div> -->
-      <div class="col-md-4">
-        <span class="fa-stack fa-4x">
-          <i class="fas fa-circle fa-stack-2x text-primary"></i>
-          <i class="fab fa-buffer fa-stack-1x fa-inverse"></i>
-        </span>
-        <h4 class="service-heading">Discover the Best of Bridge</h4>
-        <p class="text-muted">
-          We ensure that every step of your learning journey with us is carefully managed to give you the best choices
-          for your needs.
-          Our lessons are friendly, interactive and warm. Everyone takes an initial placement test – we do this to make
-          sure you are
-          learning at right level for you. These learning levels are your ladder for progress and achievement – you can
-          progress over time from beginner to intermediate and advanced sure in the knowledge we are with you every step
-          of the way.
-        </p>
-      </div>
     </div>
   </section>
 
@@ -317,7 +309,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="" />
+            <img class="img-fluid" src="img/portfolio/04-thumbnail.png" alt="" />
           </a>
           <div class="portfolio-caption">
             <h4>Presentation Skills</h4>
@@ -334,7 +326,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="" />
+            <img class="img-fluid" src="img/portfolio/02-thumbnail.png" alt="" />
           </a>
           <div class="portfolio-caption">
             <h4>Communication</h4>
@@ -351,7 +343,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="" />
+            <img class="img-fluid" src="img/portfolio/03-thumbnail.png" alt="" />
           </a>
           <div class="portfolio-caption">
             <h4>Communication</h4>
@@ -368,7 +360,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="" />
+            <img class="img-fluid" src="img/portfolio/05-thumbnail.png" alt="" />
           </a>
           <div class="portfolio-caption">
             <h4>Meeting Skills</h4>
@@ -385,7 +377,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="" />
+            <img class="img-fluid" src="img/portfolio/06-thumbnail.png" alt="" />
           </a>
           <div class="portfolio-caption">
             <h4>Negotiation Skills </h4>
@@ -402,7 +394,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/07-thumbnail.jpg" alt="" />
+            <img class="img-fluid" src="img/portfolio/07-thumbnail.png" alt="" />
           </a>
           <div class="portfolio-caption">
             <h4>Leadership Skills</h4>
@@ -420,7 +412,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/08-thumbnail.jpg" alt="" />
+            <img class="img-fluid" src="img/portfolio/08-thumbnail.png" alt="" />
           </a>
           <div class="portfolio-caption">
             <h4>Public Speaking and Special Occasion Speeches</h4>
@@ -437,7 +429,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/09-thumbnail.jpg" alt="" />
+            <img class="img-fluid" src="img/portfolio/09-thumbnail.png" alt="" />
           </a>
           <div class="portfolio-caption">
             <h4>Get that job!</h4>
@@ -454,7 +446,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/10-thumbnail.jpg" alt="" />
+            <img class="img-fluid" src="img/portfolio/10-thumbnail.png" alt="" />
           </a>
           <div class="portfolio-caption">
             <h4>Administration skills</h4>
@@ -471,7 +463,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/11-thumbnail.jpg" alt="" />
+            <img class="img-fluid" src="img/portfolio/11-thumbnail.png" alt="" />
           </a>
           <div class="portfolio-caption">
             <h4>Customer Service</h4>
