--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <h4>Presentation Skills</h4>
             <p class="text-muted">The Essentials</p>
             <a data-toggle="modal" href="#portfolioModal1">
-              <button type="button" class="btn btn-success">Detail</button>
+              <button type="button" class="btn btn-success" style="background-color: black;">Detail</button>
             </a>
           </div>
         </div>
@@ -315,7 +315,7 @@
             <h4>Presentation Skills</h4>
             <p class="text-muted">Beyond the Essentials</p>
             <a data-toggle="modal" href="#portfolioModal2">
-              <button type="button" class="btn btn-success">Detail</button>
+              <button type="button" class="btn btn-success" style="background-color: black;">Detail</button>
             </a>
           </div>
         </div>
@@ -332,7 +332,7 @@
             <h4>Communication</h4>
             <p class="text-muted">Writing to get your Message Across</p>
             <a data-toggle="modal" href="#portfolioModal3">
-              <button type="button" class="btn btn-success">Detail</button>
+              <button type="button" class="btn btn-success" style="background-color: black;">Detail</button>
             </a>
           </div>
         </div>
@@ -349,7 +349,7 @@
             <h4>Communication</h4>
             <p class="text-muted">Writing beyond the essentials</p>
             <a data-toggle="modal" href="#portfolioModal4">
-              <button type="button" class="btn btn-success">Detail</button>
+              <button type="button" class="btn btn-success" style="background-color: black;">Detail</button>
             </a>
           </div>
         </div>
@@ -366,7 +366,7 @@
             <h4>Meeting Skills</h4>
             <p class="text-muted">Leading a meeting: getting the best results</p>
             <a data-toggle="modal" href="#portfolioModal5">
-              <button type="button" class="btn btn-success">Detail</button>
+              <button type="button" class="btn btn-success" style="background-color: black;">Detail</button>
             </a>
           </div>
         </div>
@@ -383,7 +383,7 @@
             <h4>Negotiation Skills </h4>
             <p class="text-muted">The Essentials</p>
             <a data-toggle="modal" href="#portfolioModal6">
-              <button type="button" class="btn btn-success">Detail</button>
+              <button type="button" class="btn btn-success" style="background-color: black;">Detail</button>
             </a>
           </div>
         </div>
@@ -400,7 +400,7 @@
             <h4>Leadership Skills</h4>
             <p class="text-muted"> Be what every team needs</p>
             <a data-toggle="modal" href="#portfolioModal7">
-              <button type="button" class="btn btn-success">Detail</button>
+              <button type="button" class="btn btn-success" style="background-color: black;">Detail</button>
             </a>
 
           </div>
@@ -418,7 +418,7 @@
             <h4>Public Speaking and Special Occasion Speeches</h4>
             <p class="text-muted">Seeing the best of you!</p>
             <a data-toggle="modal" href="#portfolioModal8">
-              <button type="button" class="btn btn-success">Detail</button>
+              <button type="button" class="btn btn-success" style="background-color: black;">Detail</button>
             </a>
           </div>
         </div>
@@ -435,7 +435,7 @@
             <h4>Get that job!</h4>
             <p class="text-muted">interview and job application skills</p>
             <a data-toggle="modal" href="#portfolioModal9">
-              <button type="button" class="btn btn-success">Detail</button>
+              <button type="button" class="btn btn-success" style="background-color: black;">Detail</button>
             </a>
           </div>
         </div>
@@ -452,7 +452,7 @@
             <h4>Administration skills</h4>
             <p class="text-muted">Making things work</p>
             <a data-toggle="modal" href="#portfolioModal10">
-              <button type="button" class="btn btn-success">Detail</button>
+              <button type="button" class="btn btn-success" style="background-color: black;">Detail</button>
             </a>
           </div>
         </div>
@@ -469,7 +469,7 @@
             <h4>Customer Service</h4>
             <p class="text-muted">Personal effectiveness: making a difference</p>
             <a data-toggle="modal" href="#portfolioModal11w">
-              <button type="button" class="btn btn-success">Detail</button>
+              <button type="button" class="btn btn-success" style="background-color: black;">Detail</button>
             </a>
           </div>
         </div>
@@ -493,7 +493,7 @@
           <ul class="timeline">
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/11.jpg" alt="" />
+                <img class="rounded-circle img-fluid" src="img/about/1.png" alt="" />
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -513,7 +513,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/22.jpg" alt="" />
+                <img class="rounded-circle img-fluid" src="img/about/2.png" alt="" />
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -533,7 +533,7 @@
             </li>
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/33.jpg" alt="" />
+                <img class="rounded-circle img-fluid" src="img/about/3.png" alt="" />
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -551,7 +551,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/44.jpg" alt="" />
+                <img class="rounded-circle img-fluid" src="img/about/4.png" alt="" />
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -573,8 +573,8 @@
               </div>
             </li>
             <li class="timeline-inverted">
-              <div class="timeline-image">
-                <h4>Be Part <br />Of Our <br />Story</h4>
+              <div class="timeline-image" >
+                <h4 style="color: black;">Be Part <br />Of Our <br />Story</h4>
               </div>
             </li>
           </ul>
