Icons and phone number changed

--- a/index.html
+++ b/index.html
@@ -241,15 +241,14 @@
         </div>
       <div class="col-md-4">
         <span class="fa-stack fa-4x">
-          <i class="fas fa-circle fa-stack-2x text-primary"></i>
-          <i class="fab fa-accusoft fa-stack-1x fa-inverse"></i>
+          <img class="rounded-circle img-fluid" src="img/about/5.png" alt="" />
         </span>
         <!-- <object data="flyer\Bridge Soft Skills Courses.pdf" type="application/pdf" width="100%" height="100%">
           <p>Alternative text - include a link <a href="https://drive.google.com/file/d/13_AFxY_6uJEhYPbZuHYOBWg2A563fuy7/view?usp=sharing">to the PDF!</a></p>
         </object> -->
-        <h4 class="service-heading">Our services in detail including price</h4>
+        <h4 class="service-heading">Our current brochure of programs and services</h4>
         <a href="flyer/Bridge Soft Skills Courses.pdf"> <img class="img-fluid" src="flyer/flyer.png" alt="" /> </a>
-        <p class="text-muted">To see detail of the services we provide<a href="flyer/Bridge Soft Skills Courses.pdf"> click here</a>.</p>
+        <p class="text-muted"><a href="flyer/Bridge Soft Skills Courses.pdf"> Click here</a>for our current brochure </p>
         <!-- <h4 class="service-heading">Special Programs for Exam Preparation</h4>
         <p class="text-muted">
           Bridge offers exam preparation programs for IELTS, SAT, TOEFL and other national and international language
@@ -326,7 +325,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail1.png" alt="" />
+            <img class="img-fluid" src="img/portfolio/02-thumbnail.png" alt="" />
           </a>
           <div class="portfolio-caption">
             <h4>Communication</h4>
@@ -343,7 +342,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail1.png" alt="" />
+            <img class="img-fluid" src="img/portfolio/03-thumbnail.png" alt="" />
           </a>
           <div class="portfolio-caption">
             <h4>Communication</h4>
@@ -806,7 +805,7 @@
             </li>
 
             <li><i class="fas fa-phone mt-4 fa-2x"></i>
-              <p>+251-920-00-00-77</p>
+              <p>+251113210397</p>
             </li>
 
             <li><i class="fas fa-envelope mt-4 fa-2x"></i>
