--- a/index.html
+++ b/index.html
@@ -284,14 +284,14 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-4 col-sm-6 portfolio-item" style="text-align: center;">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/01-thumbnail.png" alt="" />
+            <img class="img-fluid" src="img/portfolio/01-thumbnail.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Presentation Skills</h4>
@@ -301,14 +301,14 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-4 col-sm-6 portfolio-item" style="text-align: center;">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/04-thumbnail.png" alt="" />
+            <img class="img-fluid" src="img/portfolio/04-thumbnail.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Presentation Skills</h4>
@@ -318,14 +318,14 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-4 col-sm-6 portfolio-item" style="text-align: center;">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.png" alt="" />
+            <img class="img-fluid" src="img/portfolio/02-thumbnail.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Communication</h4>
@@ -335,14 +335,14 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-4 col-sm-6 portfolio-item" style="text-align: center;">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail.png" alt="" />
+            <img class="img-fluid" src="img/portfolio/03-thumbnail.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Communication</h4>
@@ -352,14 +352,14 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-4 col-sm-6 portfolio-item" style="text-align: center;">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/05-thumbnail.png" alt="" />
+            <img class="img-fluid" src="img/portfolio/05-thumbnail.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Meeting Skills</h4>
@@ -369,14 +369,14 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-4 col-sm-6 portfolio-item" style="text-align: center;"> 
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/06-thumbnail.png" alt="" />
+            <img class="img-fluid" src="img/portfolio/06-thumbnail.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Negotiation Skills </h4>
@@ -386,14 +386,14 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-4 col-sm-6 portfolio-item" style="text-align: center;">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal7">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/07-thumbnail.png" alt="" />
+            <img class="img-fluid" src="img/portfolio/07-thumbnail.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Leadership Skills</h4>
@@ -404,14 +404,14 @@
 
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-4 col-sm-6 portfolio-item" style="text-align: center;">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal8">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/08-thumbnail.png" alt="" />
+            <img class="img-fluid" src="img/portfolio/08-thumbnail.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Public Speaking and Special Occasion Speeches</h4>
@@ -421,14 +421,14 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-4 col-sm-6 portfolio-item" style="text-align: center;">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal9">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/09-thumbnail.png" alt="" />
+            <img class="img-fluid" src="img/portfolio/09-thumbnail.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Get that job!</h4>
@@ -438,14 +438,14 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-4 col-sm-6 portfolio-item" style="text-align: center;">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal10">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/10-thumbnail.png" alt="" />
+            <img class="img-fluid" src="img/portfolio/10-thumbnail.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Administration skills</h4>
@@ -455,14 +455,14 @@
             </a>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
+        <div class="col-md-4 col-sm-6 portfolio-item" style="text-align: center;">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal11">
             <div class="portfolio-hover">
               <div class="portfolio-hover-content">
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/11-thumbnail.png" alt="" />
+            <img class="img-fluid" src="img/portfolio/11-thumbnail.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Customer Service</h4>
