--- a/index.html
+++ b/index.html
@@ -815,9 +815,10 @@
         </div>
         <div class="col-md-6">
           <div class="form-group">
-            <iframe
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3940.4815419415095!2d38.80917351478653!3d9.019760593527295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b85ce7aa14399%3A0x4e3f73427725afd7!2sBridge%20School%20of%20languages!5e0!3m2!1sen!2set!4v1622093945371!5m2!1sen!2set" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <!-- <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3940.5003044918994!2d38.813807914786636!3d9.018041793528466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4e3f73427725afd7!2sBridge%20School%20of%20languages!5e0!3m2!1sen!2set!4v1619698055043!5m2!1sen!2set"
-              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe> -->
           </div>
         </div>
         <div class="clearfix"></div>
@@ -830,6 +831,28 @@
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
+      <div id="clients" class="section-bg">
+        <div class="container">
+            <div class="section-header">
+                <h3>Our CLients</h3>
+                <p>Meet our happy clients</p>
+            </div>
+            <div class="row no-gutters clients-wrap clearfix wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="client-logo"> <img src="img/clients/Excellerent.png" class="img-fluid" alt=""> </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="client-logo"> <img src="img/clients/Compassion.png" class="img-fluid" alt=""> </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6">
+                    <div class="client-logo"> <img src="img/clients/Fawe.png" class="img-fluid" alt=""> </div>
+                </div>
+                <div class="col-lg-3 col-md-4 col-xs-6" style="padding-top: 10px;">
+                  <div class="client-logo"> <img src="img/clients/Nexgen.png" class="img-fluid" alt=""> </div>
+              </div>
+            </div>
+        </div>
+      </div>
       <div class="row align-items-center">
         <div class="col-md-4">
           <span class="copyright">Copyright &copy; www.bridgeschooloflanguages.com <br> Addis Ababa, Ethiopia 2020</span>
