--- a/index.html
+++ b/index.html
@@ -593,17 +593,20 @@
             <p>Meet our happy clients</p>
         </div>
         <div class="row no-gutters clients-wrap clearfix wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
-            <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="col-lg-3 col-md-3 col-xs-6">
                 <div class="client-logo"> <img src="img/clients/Excellerent.png" class="img-fluid" alt=""> </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="col-lg-4 col-md-4 col-xs-6">
                 <div class="client-logo"> <img src="img/clients/Compassion.png" class="img-fluid" alt=""> </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="col-lg-4 col-md-4 col-xs-6">
                 <div class="client-logo"> <img src="img/clients/Fawe.png" class="img-fluid" alt=""> </div>
             </div>
-            <div class="col-lg-3 col-md-4 col-xs-6" style="padding-top: 10px;">
+            <div class="col-lg-4 col-md-4 col-xs-6" style="padding-top: 10px; margin-top: 20px;">
               <div class="client-logo"> <img src="img/clients/Nexgen.png" class="img-fluid" alt=""> </div>
+            </div>
+            <div class="col-lg-4 col-md-4 col-xs-6" style="padding-top: 10px; margin-top: 20px;">
+              <div class="client-logo"> <img src="img/clients/Dejen.png" class="img-fluid" alt=""> </div>
           </div>
         </div>
     </div>
