--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/4.jpg" alt="" />
             <h4>Lynne Upton</h4>
-            <p class="text-muted">Online english teacher  in the UK</p>
+            <p class="text-muted">Online English teacher  in the UK</p>
             <p class="text-muted">Based in London, Lynne has taught English online to students in London, Ethiopia,
               Brazil and Turkey and has studied a Teaching English course by Global English. She has a degree in English
               Language from Durham University. She used to work in Communications before having her three children.</p>
@@ -686,7 +686,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/5.jpg" alt="" />
             <h4>Rob Rawlins</h4>
-            <p class="text-muted">Online english teacher in the UK</p>
+            <p class="text-muted">Online English teacher in the UK</p>
             <p class="text-muted">After working for the church, Rob changed career to English language teaching. He
               taught in London colleges and started his own school. He retired in 2014 and came to Addis with his wife
               to start Bridge, this school. He is so pleased to see it continue under Abay's leadership. He likes
@@ -698,7 +698,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/6n.jpg" alt="" />
             <h4>Ruth Derrick</h4>
-            <p class="text-muted">Online english teacher in USA</p>
+            <p class="text-muted">Online English teacher in USA</p>
             <p class="text-muted">Ruth Derrick is the Associate Director of Global Partners for Education. She has a
               Master’s Degree in English. She has taught a variety of courses at the university level, has taught
               classes in Asia and Africa, as well as online courses to both children and college students. She sees
