Images not working changed to png

--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/Mehiret.jpg" alt="" />
+            <img class="mx-auto rounded-circle" src="img/team/Mehiret.png" alt="" />
             <h4>Mehiret Ayele</h4> 
             <p class="text-muted">Customer Service Manager<br>
             </p>
@@ -714,7 +714,7 @@
         
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/Betelhem.jpg" alt="" />
+            <img class="mx-auto rounded-circle" src="img/team/Betelhem.png" alt="" />
             <h4>Betelhem Tesfaye</h4>
             <p class="text-muted">Soft Skills Trainer <br>
             </p>
@@ -722,14 +722,14 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/Ramzi.jpg" alt="" />
+            <img class="mx-auto rounded-circle" src="img/team/Ramzi.png" alt="" />
             <h4>Ramzi Abdurhaman</h4>
             <p class="text-muted">Soft Skills Trainer</p>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/Kidane.jpg" alt="" />
+            <img class="mx-auto rounded-circle" src="img/team/Kidane.png" alt="" />
             <h4>Kidane Gedefaw</h4>
             <p class="text-muted">Soft Skills Trainer <br>
             </p>
