--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                 <div class="client-logo"> <img src="img/clients/Fawe.png" class="img-fluid" alt=""> </div>
             </div>
             <div class="col-lg-4 col-md-4 col-xs-6" style="padding-top: 10px; margin-top: 20px;">
-              <div class="client-logo"> <img src="img/clients/Nexgen.png" class="img-fluid" alt=""> </div>
+              <div class="client-logo"> <img src="img/clients/nexgens.png" class="img-fluid" alt=""> </div>
             </div>
             <div class="col-lg-4 col-md-4 col-xs-6" style="padding-top: 10px; margin-top: 20px;">
               <div class="client-logo"> <img src="img/clients/Dejen.png" class="img-fluid" alt=""> </div>
