Soft skills trainers bio added

--- a/index.html
+++ b/index.html
@@ -718,6 +718,11 @@
             <h4>Betelhem Tesfaye</h4>
             <p class="text-muted">Soft Skills Trainer <br>
             </p>
+            <p class="text-muted"> I grew up in Debre Zeit, Ethiopia and attended Bahir Dar and Addis Ababa university and graduated with a degree in English Language Education with a special interest in TEFL. 
+              I started my professional career straight away and over time built up a wide portfolio of training and facilitating opportunities, with key expertise in Core Skills training for the British Council, for example: Creativity, Problem Solving, Citizenship, Digital Literacy and Communication Skills.   
+              I also have significant experience working on Leadership, Coaching and Team Building programmes and training teachers on the British Council prestigious LEAP (Learn English Audio Programme) programme. 
+              My special driving interest as a validated facilitator is helping people reach their individual potential and so I have been boosting practitioners’ knowledge of pedagogy and life skills through various platforms including the USAID-funded in-service teacher training.
+               </p>
           </div>
         </div>
         <div class="col-sm-4">
@@ -725,6 +730,12 @@
             <img class="mx-auto rounded-circle" src="img/team/Ramzi.png" alt="" />
             <h4>Ramzi Abdurhaman</h4>
             <p class="text-muted">Soft Skills Trainer</p>
+            <p class="text-muted">I am dedicated and passionate about education .... always ready to learn and develop professionally myself, and being a learning support for others.
+              I have MA-TEFL from Addis Ababa University and MA-TESOL from Lancaster University, a leader in the field in the UK.
+              I have over thirty years of experience in teaching, training and facilitation. I have been working as a facilitator for the British Council on a wide range of projects. 
+              Some prestigious highlights include: ‘CORE SKILLS’, ‘Critical Thinking and Problem Solving’, ‘Communication and Collaboration’, ‘Leadership and Personal Development’, ‘Instructional Leadership’, and ‘Building Team’ among others. 
+              My experience also extends into the region, for example, I have also delivered TOT training for Master Trainers in Nigeria and South Sudan.
+              </p>
           </div>
         </div>
         <div class="col-sm-4">
@@ -732,6 +743,11 @@
             <img class="mx-auto rounded-circle" src="img/team/Kidane.png" alt="" />
             <h4>Kidane Gedefaw</h4>
             <p class="text-muted">Soft Skills Trainer <br>
+              <p class="text-muted"> I have been passionate about education for a very long time! My qualifications, experience and expertise cover a wide range of roles – as a teacher, trainer and now a validated licensed educational consultant.  
+                I have an MA from Addis Ababa University, Ethiopia. I have also a Post Graduate Certificate in Trainer Development from University of Exeter (College of St. Mark and St. John), UK. 
+                Among my many engagements, I have worked with the British Council delivering training to university based curriculum developers on 21st Century Skills and also on the prestigious global Connecting Classrooms programme with touching on some essential enabling skills for today’s knowledge workers – critical thinking and problem solving, digital literacy and leadership development. 
+                This depth of experience has placed me well to work now with an ever-increasing range of up-to-date workplace skills for all levels of local and international professional, commercial and public service organisations.
+                 </p>
             </p>
           </div>
         </div>
