--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/Ramzi.jpg" alt="" />
+            <img class="mx-auto rounded-circle" src="img/team/Ramzi.png" alt="" />
             <h4>Ramzi Abdurhaman</h4>
             <p class="text-muted">Soft Skills Trainer</p>
             <p class="text-muted">I am dedicated and passionate about education .... always ready to learn and develop professionally myself, and being a learning support for others.
@@ -740,7 +740,7 @@
         </div>
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/Kidane.jpg" alt="" />
+            <img class="mx-auto rounded-circle" src="img/team/Kidane.png" alt="" />
             <h4>Kidane Gedefaw</h4>
             <p class="text-muted">Soft Skills Trainer <br>
               <p class="text-muted"> I have been passionate about education for a very long time! My qualifications, experience and expertise cover a wide range of roles – as a teacher, trainer and now a validated licensed educational consultant.  
