Portfolio images changed

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/01-thumbnail.png" alt="" width="200" height="200"/>
+            <img class="img-fluid" src="img/portfolio/presentation essential.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Presentation Skills</h4>
@@ -311,7 +311,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/04-thumbnail.png" alt="" width="200" height="200"/>
+            <img class="img-fluid" src="img/portfolio/presentation beyond essential.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Presentation Skills</h4>
@@ -328,7 +328,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.png" alt="" width="200" height="200"/>
+            <img class="img-fluid" src="img/portfolio/communications writing essentials.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Communication</h4>
@@ -345,7 +345,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail.png" alt="" width="200" height="200"/>
+            <img class="img-fluid" src="img/portfolio/communication beyond essentials.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Communication</h4>
@@ -362,7 +362,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/05-thumbnail.png" alt="" width="200" height="200"/>
+            <img class="img-fluid" src="img/portfolio/meeting.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Meeting Skills</h4>
@@ -379,7 +379,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/06-thumbnail.png" alt="" width="200" height="200"/>
+            <img class="img-fluid" src="img/portfolio/negotiation.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Negotiation Skills </h4>
@@ -396,7 +396,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/07-thumbnail.png" alt="" width="200" height="200"/>
+            <img class="img-fluid" src="img/portfolio/leadership.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Leadership Skills</h4>
@@ -414,7 +414,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/08-thumbnail.png" alt="" width="200" height="200"/>
+            <img class="img-fluid" src="img/portfolio/public speaking.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Public Speaking and Special Occasion Speeches</h4>
@@ -431,7 +431,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/09-thumbnail.png" alt="" width="200" height="200"/>
+            <img class="img-fluid" src="img/portfolio/interview.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Get that job!</h4>
@@ -448,7 +448,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/10-thumbnail.png" alt="" width="200" height="200"/>
+            <img class="img-fluid" src="img/portfolio/leadership.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Administration skills</h4>
@@ -465,7 +465,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/11-thumbnail.png" alt="" width="200" height="200"/>
+            <img class="img-fluid" src="img/portfolio/customer service.png" alt="" width="200" height="200"/>
           </a>
           <div class="portfolio-caption">
             <h4>Customer Service</h4>
