Description and keyword meta added.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="description" content="Bridge School of Languages is your first choice for soft skills and language training in Addis Ababa. The school is located in Gurd Shola, Addis Ababa Ethiopia. We provide training at
+  any location our customers request and also provide online classes." />
+  <meta name="key" content="Soft skill and language school in Addis Ababa, Ethiopia."/>
+  <meta name="author" content="Beka Haile" />
 
   <title>Bridge School of Languages</title>
 
