Name change from bridge school to bridge professional development center.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta
       name="description"
-      content="Bridge School of Languages is your first choice for soft skills and language training in Addis Ababa. The school is located in Gurd Shola, Addis Ababa Ethiopia. We provide training at
+      content="Bridge Professional Development Center is your first choice for soft skills and language training in Addis Ababa. The development center is located in Gurd Shola, Addis Ababa Ethiopia. We provide training at
   any location our customers request and also provide online classes."
     />
     <meta
@@ -17,7 +17,7 @@
     />
     <meta name="author" content="Beka Haile" />
 
-    <title>Bridge School of Languages</title>
+    <title>Bridge Professional Development Center</title>
 
     <!-- Bootstrap core CSS -->
     <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -87,7 +87,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"
-          >Bridge School of Languages</a
+          >Bridge Professional Development Center</a
         >
         <!-- <img src="img/Bridge logo.jpg" alt="Avatar" style="border-radius: 50%; width:100px; height: 100px;"> -->
         <button
@@ -135,7 +135,9 @@
     <header class="masthead">
       <div class="container">
         <div class="intro-text">
-          <div class="intro-lead-in">Welcome To Bridge School of Languages</div>
+          <div class="intro-lead-in">
+            Welcome To Bridge Professional Development Center
+          </div>
           <div class="intro-heading text-uppercase">
             WE HAVE A PASSION FOR COMMUNICATION AND LANGUAGES
           </div>
@@ -187,8 +189,8 @@
             <h3>About Us</h3>
             <p>
               <strong
-                >Bridge School of Languages is your first choice for soft skills
-                and language training in Addis Ababa.
+                >Bridge Professional Development Center is your first choice for
+                soft skills and language training in Addis Ababa.
               </strong>
               <br />
               We specialise in affordable and effective face-to-face and on-line
@@ -202,8 +204,9 @@
               sectors. <br />
 
               Whatever learning, training and development needs your
-              organisation has, Bridge School can create a tailor-made solution
-              that fits you, your people, your budget and your plans. <br />
+              organisation has, bridge professional development center can
+              create a tailor-made solution that fits you, your people, your
+              budget and your plans. <br />
             </p>
             <h5 style="margin-left: 50%">1</h5>
           </div>
@@ -781,8 +784,8 @@
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">About</h2>
             <h3 class="section-subheading text-muted">
-              Bridge School of Languages, training provider in Addis Ababa,
-              Ethiopia.
+              Bridge Professional Development Center, training provider in Addis
+              Ababa, Ethiopia.
             </h3>
           </div>
         </div>
@@ -857,9 +860,10 @@
                   <div class="timeline-body">
                     <p class="text-muted">
                       People have different schedules and different amounts of
-                      time available, so our school offers different class
-                      options – schedule, size, location and duration - that
-                      will give you the fullest flexibility, where you need it.
+                      time available, so our development center offers different
+                      class options – schedule, size, location and duration -
+                      that will give you the fullest flexibility, where you need
+                      it.
                     </p>
                   </div>
                 </div>
@@ -977,22 +981,22 @@
               <h4>Abayneh Haile</h4>
               <p class="text-muted">Director</p>
               <p class="text-muted">
-                I am the owner and director of Bridge School of Languages. I am
-                passionate about education. Here are some of the milestones of
-                my career, in Ethiopia and abroad. I have worked in the
-                education sector for 20 years in different capacities, notably
-                for the British Council as Facilitator, Programme Manager and
-                Consultant. I have also worked for the UK based consultancy
-                Transform ELT and Teach For Ethiopia as a consultant. I have
-                delivered intensive training programs in many countries in
-                Africa and beyond. I have an MA from Leeds University, UK in
-                Teacher Education. I am also UK CELTA qualified to teach English
-                to adults, a widely recognised and respected base qualification.
-                I am very active in my own personal professional development and
-                I am engaged with supporting others in the profession wherever I
-                can. I am serving as President of the Ethiopian English Language
-                Professionals’ Association. In short, I love teaching as well as
-                learning!
+                I am the owner and director of Bridge Professional Development
+                Center. I am passionate about education. Here are some of the
+                milestones of my career, in Ethiopia and abroad. I have worked
+                in the education sector for 20 years in different capacities,
+                notably for the British Council as Facilitator, Programme
+                Manager and Consultant. I have also worked for the UK based
+                consultancy Transform ELT and Teach For Ethiopia as a
+                consultant. I have delivered intensive training programs in many
+                countries in Africa and beyond. I have an MA from Leeds
+                University, UK in Teacher Education. I am also UK CELTA
+                qualified to teach English to adults, a widely recognised and
+                respected base qualification. I am very active in my own
+                personal professional development and I am engaged with
+                supporting others in the profession wherever I can. I am serving
+                as President of the Ethiopian English Language Professionals’
+                Association. In short, I love teaching as well as learning!
               </p>
             </div>
           </div>
@@ -1326,7 +1330,7 @@
 
               <li>
                 <i class="fas fa-envelope mt-4 fa-2x"></i>
-                <p>info@bridgeschooloflanguages.com</p>
+                <p>info@bridgepdc.com</p>
               </li>
             </ul>
           </div>
@@ -1335,9 +1339,9 @@
 
         <div style="margin-left: 5%; margin-top: 100px">
           <p style="color: white; size: 20px" class="text-left">
-            Bridge School of languages is located on the road that leads form
-            Megenagna to Gurd Shola right next to Ethio-Ceramics, on the ninth
-            floor of Pecan Building.
+            Bridge Professional Development Center is located on the road that
+            leads form Megenagna to Gurd Shola right next to Ethio-Ceramics, on
+            the ninth floor of Pecan Building.
             <br />-The area is surrounded by the hiltops of Yeka in Megenagna
             which has given the place a fascinating view. <br />-Our office is
             located on the left corner of the building’s ninth floor (office
@@ -1388,7 +1392,7 @@
           <div class="row align-items-center">
             <div class="col-md-4">
               <span class="copyright"
-                >Copyright &copy; www.bridgeschooloflanguages.com <br />
+                >Copyright &copy; www.bridgepdc.com <br />
                 Addis Ababa, Ethiopia 2020</span
               >
             </div>
