--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <meta
       name="keywords"
-      content="Soft skill training, Language school in Addis Ababa, Language school in Ethiopia, Communication training"
+      content="Soft skill training, Professional Development Center in Addis Ababa, Professional Development Center in Ethiopia, Communication training"
     />
     <meta name="author" content="Beka Haile" />
 
