--- a/index.html
+++ b/index.html
@@ -1444,11 +1444,11 @@
                 <div class="col-lg-8 mx-auto">
                   <div class="modal-body" style="text-align: left">
                     <!-- Project Details Go Here -->
-                    <img
+                    <!-- <img
                       class="img-fluid"
                       src="img/portfolio/01-full.png"
                       alt=""
-                    />
+                    /> -->
                     <h4>Presentation Skills – The Essentials:</h4>
                     Have the right impact.<br />
                     Feel at ease – you’ve covered all the bases<br /><br />
@@ -1488,11 +1488,11 @@
                 <div class="col-lg-8 mx-auto">
                   <div class="modal-body" style="text-align: left">
                     <!-- Project Details Go Here -->
-                    <img
+                    <!-- <img
                       class="img-fluid d-block mx-auto"
                       src="img/portfolio/04-full.jpg"
                       alt=""
-                    />
+                    /> -->
                     <h4>Presentation Skills – Beyond the Essentials:</h4>
                     Building on your expertise.<br /><br />
                     Deliver presentations with impact and clarity.<br /><br />
@@ -1533,11 +1533,11 @@
                 <div class="col-lg-8 mx-auto">
                   <div class="modal-body" style="text-align: left">
                     <!-- Project Details Go Here -->
-                    <img
+                    <!-- <img
                       class="img-fluid d-block mx-auto"
                       src="img/portfolio/02-full.jpg"
                       alt=""
-                    />
+                    /> -->
                     <p></p>
                     <h4>Communication – Writing to get your Message Across</h4>
                     Write with ease – you’ve covered the bases <br /><br />
@@ -1579,11 +1579,11 @@
                 <div class="col-lg-8 mx-auto">
                   <div class="modal-body" style="text-align: left">
                     <!-- Project Details Go Here -->
-                    <img
+                    <!-- <img
                       class="img-fluid d-block mx-auto"
                       src="img/portfolio/03-full.jpg"
                       alt=""
-                    />
+                    /> -->
                     <h4>Communication – Writing beyond the essentials</h4>
                     Write documents that have clarity and real impact<br /><br />
                     Communication skills in English, including writing, are
@@ -1624,11 +1624,11 @@
                 <div class="col-lg-8 mx-auto">
                   <div class="modal-body" style="text-align: left">
                     <!-- Project Details Go Here -->
-                    <img
+                    <!-- <img
                       class="img-fluid d-block mx-auto"
                       src="img/portfolio/05-full.jpg"
                       alt=""
-                    />
+                    /> -->
                     <h4>Meeting Skills</h4>
                     Leading a meeting: Getting the best results <br />
                     Make meetings matter <br /><br />
@@ -1669,11 +1669,11 @@
                 <div class="col-lg-8 mx-auto">
                   <div class="modal-body" style="text-align: left">
                     <!-- Project Details Go Here -->
-                    <img
+                    <!-- <img
                       class="img-fluid d-block mx-auto"
                       src="img/portfolio/06-full.jpg"
                       alt=""
-                    />
+                    /> -->
                     <h4>Negotiation Skills - the Essentials:</h4>
                     Get the result you want <br /><br />
                     Achieve win:win and build relationships<br /><br />
@@ -1715,11 +1715,11 @@
                 <div class="col-lg-8 mx-auto">
                   <div class="modal-body" style="text-align: left">
                     <!-- Project Details Go Here -->
-                    <img
+                    <!-- <img
                       class="img-fluid d-block mx-auto"
                       src="img/portfolio/07-full.jpg"
                       alt=""
-                    />
+                    /> -->
                     <h4>Leadership Skills</h4>
                     Be what every team needs <br /><br />
                     Managers are leaders too<br /><br />
@@ -1760,11 +1760,11 @@
                 <div class="col-lg-8 mx-auto">
                   <div class="modal-body" style="text-align: left">
                     <!-- Project Details Go Here -->
-                    <img
+                    <!-- <img
                       class="img-fluid d-block mx-auto"
                       src="img/portfolio/08-full.jpg"
                       alt=""
-                    />
+                    /> -->
                     <h4>Public Speaking and Special Occasion Speeches</h4>
                     Seeing the best of you! You can win over, motivate and
                     inform! <br /><br />
@@ -1805,11 +1805,11 @@
                 <div class="col-lg-8 mx-auto">
                   <div class="modal-body" style="text-align: left">
                     <!-- Project Details Go Here -->
-                    <img
+                    <!-- <img
                       class="img-fluid d-block mx-auto"
                       src="img/portfolio/09-full.jpg"
                       alt=""
-                    />
+                    /> -->
                     <h4>
                       Get that job! - interview and job application skills
                     </h4>
@@ -1849,11 +1849,11 @@
                 <div class="col-lg-8 mx-auto">
                   <div class="modal-body" style="text-align: left">
                     <!-- Project Details Go Here -->
-                    <img
+                    <!-- <img
                       class="img-fluid d-block mx-auto"
                       src="img/portfolio/10-full.jpg"
                       alt=""
-                    />
+                    /> -->
                     <h4>Administration skills - making things work</h4>
                     Be valued, be noticed, be important<br /><br />
 
@@ -1895,11 +1895,11 @@
                 <div class="col-lg-8 mx-auto">
                   <div class="modal-body" style="text-align: left">
                     <!-- Project Details Go Here -->
-                    <img
+                    <!-- <img
                       class="img-fluid d-block mx-auto"
                       src="img/portfolio/11-full.jpg"
                       alt=""
-                    />
+                    /> -->
                     <h4>Customer Service</h4>
                     Personal effectiveness: making a difference <br />
                     Be effective, friendly and customer focused!<br /><br />
