--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <meta
       name="keywords"
-      content="Soft skill training, Professional Development Center in Addis Ababa, Professional Development Center in Ethiopia, Communication training, bridge, bridgepdc, bridgepdc.com"
+      content="Bridge Proffesional Development Center, Bridge Development Center, Soft skill training, Professional Development Center in Addis Ababa, Professional Development Center in Ethiopia, Communication training, bridge, bridgepdc, bridgepdc.com"
     />
     <meta name="author" content="Beka Haile" />
 
@@ -86,9 +86,9 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top"
-          >Bridge Professional Development Center</a
-        >
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+          Bridge Professional Development Center
+        </a>
         <!-- <img src="img/Bridge logo.jpg" alt="Avatar" style="border-radius: 50%; width:100px; height: 100px;"> -->
         <button
           class="navbar-toggler navbar-toggler-right"
@@ -136,7 +136,7 @@
       <div class="container">
         <div class="intro-text">
           <div class="intro-lead-in">
-            Welcome To Bridge Professional Development Center
+            <h1>Welcome To Bridge Professional Development Center</h1>
           </div>
           <div class="intro-heading text-uppercase">
             WE HAVE A PASSION FOR COMMUNICATION AND LANGUAGES
