Flyer image changed

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             Our current brochure of programs and services
           </h4>
           <a href="flyer/New flyer Sept 2021.pdf">
-            <img class="img-fluid" src="flyer/flyer.png" alt="" />
+            <img class="img-fluid" src="flyer/flyer 1.png" alt="" />
           </a>
           <p class="text-muted">
             <a href="flyer/Bridge Soft Skills Courses.pdf"> Click here </a>for
