Twitter icon and link added.

--- a/index.html
+++ b/index.html
@@ -1406,6 +1406,14 @@
                     <i class="fab fa-facebook-f"></i>
                   </a>
                 </li>
+                <li class="list-inline-item">
+                  <a
+                    href="https://www.linkedin.com/company/54312960"
+                    target="_blank"
+                  >
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                </li>
               </ul>
             </div>
             <div class="col-md-4">
