Linkedin icon changed

--- a/index.html
+++ b/index.html
@@ -1411,7 +1411,7 @@
                     href="https://www.linkedin.com/company/54312960"
                     target="_blank"
                   >
-                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-linkedin"></i>
                   </a>
                 </li>
               </ul>
