--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         class="row text-center"
         style="margin-top: 30px; margin-left: 2%; margin-right: 2%"
       >
-        <div class="col-md-4"></div>
+        <div class="col-md-2"></div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <img
@@ -348,18 +348,26 @@
           time and personal resources. We have everything you need – come talk to us. .
         </p> -->
         </div>
-        <!-- <div class="col-md-4">
+        <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="fas fa-child fa-stack-1x fa-inverse"></i>
+            <img
+              class="rounded-circle img-fluid"
+              src="img/about/5.png"
+              alt=""
+            />
           </span>
-          <h4 class="service-heading">Young Learner Programs </h4>
+          <h4 class="service-heading">
+            Public course <br />
+            schedule
+          </h4>
+          <a href="flyer/Public Course schedule flyer.pdf">
+            <img class="img-fluid" src="flyer/schedule.png" alt="" />
+          </a>
           <p class="text-muted">
-            Our carefully designed Young Learner Summer Programs are for students between five to fifteen years old, who would to develop their
-             English and other language skills further in interesting, fun and new ways. They can join “The Reading Challenge” for example, or 
-             explore activities around reading, writing, acting, singing and drawing that will challenge and motivate in lasting ways.    
+            <a href="flyer/Bridge Soft Skills Courses.pdf"> Click here </a>for
+            our public course schedule
           </p>
-        </div> -->
+        </div>
       </div>
     </section>
 
