--- a/index.html
+++ b/index.html
@@ -335,8 +335,9 @@
             <img class="img-fluid" src="flyer/flyer 1.png" alt="" />
           </a>
           <p class="text-muted">
-            <a href="flyer/Bridge Soft Skills Courses.pdf"> Click here </a>for
-            our current brochure
+            <a href="flyer/Bridge Professional Development Center 2021.pdf">
+              Click here </a
+            >for our current brochure
           </p>
           <!-- <h4 class="service-heading">Special Programs for Exam Preparation</h4>
         <p class="text-muted">
@@ -364,7 +365,7 @@
             <img class="img-fluid" src="flyer/schedule.png" alt="" />
           </a>
           <p class="text-muted">
-            <a href="flyer/Bridge Soft Skills Courses.pdf"> Click here </a>for
+            <a href="flyer/Public Course schedule flyer.pdf"> Click here </a>for
             our public course schedule
           </p>
         </div>
